assets/css/style.css
:root {
    --bkgdcolor: #bab19c;
    --logocenter: #412354;
    --logochoc: #402312;
    --logorasp: #9e1460;
    --darkberry: #51082f;
    flex: 2 1 auto;
    font-size: 10px;
}

.logo {
    max-width: 96%;
    border-radius: 15px 15px;
    margin: 20px;
}

body {
    font-family:Arial, Helvetica, sans-serif;
    font-size: 1.5rem;
    line-height: 1.5rem;
    color: black;
    background-color: var(--bkgdcolor);
    background-repeat: none;
    padding: 2rem 2rem;
}

p { 
    color: black;
    font-size: 1.75rem;
    line-height: 1.85rem;
    margin: auto;
    padding-bottom: 1.25rem;
}

a:link {
    color:#412354;
}

a:visited {
    color: #9e1460;
}

a:hover {
    color: blueviolet;
}

h1, h2, h3, h4, h5, h6 {
    margin-bottom: .625rem;
    color: var(--logocenter);
    line-height: 1.1;
}

h1 {
    color: black;
    font-weight: bolder;
    line-height: 1.5;
    font-size: 2.5rem;
    text-align: center;
}

h2 {
    color:var(--darkberry);
    font-weight: bold;
    line-height: 1.25;
    font-size: 2.25rem;
    text-decoration: none;
}

h3 {
    margin-bottom: .625rem;
    color:var(--darkberry);
    font-weight: bold;
    line-height: 1.25;
    font-size: 2rem;
    text-decoration: none;
}

nav {
    display: flex;
    background-color: var(--bkgdcolor);
}

nav a{
    padding: 1vw 5vw 1vw 5vw;
    text-decoration: none;
    text-align: center;
}

.row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.imgbox {
    display: flex;
    border-color: #402312;
    border-radius: 8px;
    border-style: double;
    padding: 1vw 5vw 1vw 5vw;
    margin-top: 2rem;
    border-radius: 8px;
    transition: all 0.5s ease-in-out;
}

.imagebox-design {
    border-radius: 8px;
    border-color: #51082f;
    border-width: medium;
}

.imgbox:hover .imagebox-design{
    flex: 0 2 1;
    cursor:pointer;
    box-shadow: inset 0px 3px 8px rgba(158, 20, 96, 1), 0 0 15px rgba(64, 35, 18, 1);

}

footer {
    text-align: center;
}

/* flex needs @media */

/* Desktop and tablet */
@media screen and (min-width: 768px) {
    header {
        padding: 4% 8%;    
    }
}

/* Mobile */
@media screen and (max-width: 767px){
    .row {
        padding: 11% 8%;
    }
}

